# OmniSynth

./: .gitignore  LICENSE  README.md  patch_metric.py  pyproject.toml  requirements.txt  rescore_meta_eval.py  run_dashboard.py
configs/: example_config.yaml  example_meta_eval_config.yaml
data/mimiciv_ed/: mimic_config.yaml  mimic_meta_eval_config.yaml  preprocess.py
examples/: example_config.yaml  example_workflow.py  meta_eval_config.yaml
figures/: correlation_figures.py  publication_figures.py
omnisynth/: __init__.py  cli.py  config.py
omnisynth/evaluation/: __init__.py  fidelity.py  missingness.py  scoring.py
omnisynth/meta_eval/: __init__.py  config.py  runner.py
omnisynth/meta_eval/scenarios/: __init__.py  base.py  baseline.py  composite.py  fidelity.py  missingness.py
omnisynth/metrics/: base.py
omnisynth/metrics/fidelity/: __init__.py  bivariate.py  multivariate.py  univariate.py
omnisynth/metrics/missingness/: __init__.py  measures.py
omnisynth/utils/: __init__.py  data_utils.py  precomputed_io.py
omnisynth/visualization/: dashboard.py  metric_registry.py  plots.py
stdg_eval/: __init__.py  cli.py  config.py
stdg_eval/evaluation/: __init__.py  fidelity.py  missingness.py  scoring.py
stdg_eval/meta_eval/: __init__.py  config.py  runner.py
stdg_eval/metrics/: __init__.py  base.py
stdg_eval/utils/: __init__.py  data_utils.py  precomputed_io.py
stdg_eval/visualization/: __init__.py  dashboard.py  metric_registry.py  plots.py
tests/: conftest.py
tests/evaluation/: test_scoring.py
tests/utils/: test_data_utils.py
(+16 files in other folders)
